gap flexbox fix

--- a/src/styles/small.scss
+++ b/src/styles/small.scss
@@ -156,14 +156,14 @@ main {
   justify-content: center;
   align-items: center;
   color: $black;
-  gap: .2rem;
   height: 3rem;
   font-size: 10px;
   &:hover {
     color: $primaryColor;
   }
   p {
-    line-height: 1rem
+    line-height: 1rem;
+    margin-top: .2rem;
   }
   &.active {
     color: $primaryColor;
@@ -513,23 +513,23 @@ main {
   text-transform: capitalize;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
   margin-bottom: 0.5rem;
   color: $grey;
   p {
     margin: 0;
     font-size: .9rem;
+    margin-left: .5rem;
   }
 }
 .details__caption--posted {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
   margin-bottom: 0.5rem;
   color: $black;
   text-decoration: underline;
   a {
     margin: 0;
+    margin-left: .5rem;
     font-size: .9rem;
     color: $black;
     &:hover {
@@ -688,7 +688,6 @@ main {
 .expandable__icon--container {
   display: flex;
   align-items: center;
-  gap: 1rem;
   padding-right: 1rem;
 }
 .expandable__circle {
@@ -697,6 +696,7 @@ main {
   width: 60px;
   min-width: 60px;
   height: 60px;
+  margin-right: 1rem;
   min-height: 60px;
   background: lighten(#61b1fc, 10%);
   display: flex;
